src/main/resources/static/styles.css
@media only screen and (min-width: 1400px) {
    body {
        background: url("Images/bkg.png") no-repeat center center fixed;
        background-size: 99%;
        background-color: rgb(104, 135, 68);
        background-repeat: repeat-x;
        animation: animatedbackground 2000s linear infinite;
        overflow-y: hidden;
    }

    @keyframes animatedbackground {
        from {
            background-position: 0 0;
        }
        to {
            background-position: 400000%;
        }
    }
}

@media only screen and (max-width: 1399px) {
    body {
        background: url("Images/bkg.png") no-repeat center center fixed;
        background-color: rgb(104, 135, 68);
        background-size: cover;
        overflow-y: hidden;
    }
}


@media only screen and (min-width: 1400px) {
    h2 {
        margin-left: 30px;
        margin-right: 30px;
        font-family: 'Amatic SC', cursive;
        font-size: 55px;
        color: black;
    }
    p {
        margin-left: 40px;
        margin-right: 70px;
        font-family: 'Open Sans Condensed', sans-serif;
        font-size: 25px;
        color: black;
    }
}

@media only screen and (max-width: 1399px) {
    h2 {
        margin-left: 30px;
        margin-right: 30px;
        font-family: 'Amatic SC', cursive;
        font-size: 35px;
        color: black;
    }
    p {
        margin-left: 40px;
        margin-right: 70px;
        font-family: 'Open Sans Condensed', sans-serif;
        font-size: 20px;
        color: black;
    }
}

div {
    display: flex;
    justify-content: center;
}

img.currentimage {
    width: 200px;
    height: 200px;
}

img.currentphoneme {
    width: 7%;
    height: 7%;
    margin-top: 5%;
}

.draggable {
    height: 40px;
    padding: 0.5em;
    float: left;
    margin: 10px 10px 10px 0;
}

.hidden {
    visibility: hidden;
}

.visible {
    visibility: visible;
}

.train {
    display: flex;
    flex-direction: row;
    height: 100%;
    justify-content: center;
    align-items: flex-end;
    margin-bottom: 1.5%;
    margin-left: 4%;
    margin-top: 0%;
}

.Initial {
    display: flex;
    width: 300px;
    height: 300px;
    float: left;
    margin: 10px;
}

.Medial {
    display: flex;
    width: 390px;
    height: 250px;
    margin-left: -35px;
    margin-right: -38px;
    float: left;
    margin-top: 10px;
}

.Final {
    display: flex;
    width: 390px;
    height: 250px;
    float: left;
    margin-top: 10px;
}

.buttonpic {
    display: flex;
    justify-content: center;
    display: inline-block;
    height: 100px;
}

.choicebutton {
    display: flex;
    justify-content: center;
    display: inline-block;
    height: 100px;
    margin-top: 3.5%;
    margin-bottom: 0.50%;
}

.frontsideupper {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-top: 1.5%;
}

.frontsidelower {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-top: 2%;
    margin-bottom: 1.85%;
}

.nonedisplay {
    display: none;
}

.gameside {
    flex-direction: column;
    justify-content: center;
    margin-top: 3%;
}

.gamesidephoneme {
    flex-direction: column;
    justify-content: left;
    max-height: 0;
    margin-left: 50px;
}

.speaker {
    width: 40px;
    height: 40px;
    display: flex;
    justify-content: center;

}

.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: rgb(136, 205, 250);
    overflow-x: hidden;
    padding-top: 15%;
    transition: 0.5s;
    font-family: 'Amatic SC', cursive;
    font-size: 200%;
    color: black;
}

.sidenav .closebtn {
    color: black;
    position: absolute;
    top: 0;
    right: 2%;
    font-size: 200%;
}

.instruction {
    font-family: 'Amatic SC', cursive;
    font-size: 35px;
    text-decoration-color: rgb(58, 81, 96);
    margin-top: 3%;
    display: flex;
    justify-content: flex-start;
    position: relative;
}

.soundtrackspeaker {
    flex: 0 1 auto;
    margin-right: auto;
    margin-left: 0.5%;
}

.instructioncenter {
    flex: 0 1 auto;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

.instruction:first-child {
    display: flex;
    justify-content: flex-start;
}

.goodbye{
    font-family: 'Amatic SC', cursive;
    font-size: 60px;
    color: black;
    margin-top: 2.5%;
    margin-bottom: 5%;
}

.thanks {
    font-family: 'Amatic SC', cursive;
    font-size: 30px;
    color: black;
    margin-bottom: 3.75%

}

#header {
    display: flex;
    align-content: space-between;
    justify-content: center;
    width: 100%;
    height: fit-content;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(255, 255, 255, 0.15);
    z-index: 2;
    font-family: 'Amatic SC', cursive;
    font-size: 75px;
    position: absolute;
    margin-right: auto;
    margin-top: 1.25%;
    right: 0;
    text-decoration-color: rgb(58, 81, 96);
    pointer-events: none;
}

#playphoneme {
    padding-top: 20px;
    padding-left: 2%;
}

#hamburger {
    width: 3.5%;
    margin-top: 2%;
}

#homegameside {
    width: 3.5%;
    margin-top: 2%;
}

#homeend {
    width: 3.5%;
    margin-top: 2%;
}

#mutesound {
    width: 40px;
    height: 40px;
    margin: 0;
    padding: 0;
}

#unmutesound {
    width: 40px;
    height: 40px;
    margin: 0;
    padding: 0;
}

